src/objects/RelationshipGroupMember__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RelationshipGroupMembers</relationshipLabel>
        <relationshipName>RelationshipGroupMembers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelationshipGroup__c</fullName>
        <label>RelationshipGroup</label>
        <referenceTo>RelationshipGroup__c</referenceTo>
        <relationshipLabel>RelationshipGroupMembers</relationshipLabel>
        <relationshipName>RelationshipGroupMembers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>RelationshipGroupMember</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>RelationshipGroupMember Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RelationshipGroupMembers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>